--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,8 @@
     <packaging>pom</packaging>
     <modules>
         <module>order-processor-commons</module>
+        <module>inventory-managenemt</module>
+        <module>reporting-service</module>
     </modules>
     <parent>
 		<groupId>org.springframework.boot</groupId>
@@ -62,27 +64,21 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-streams</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <scope>test</scope>
+        </dependency>
 		<!-- swagger annotations -->
 		<dependency>
 			<groupId>io.swagger</groupId>
 			<artifactId>swagger-annotations</artifactId>
 			<version>1.5.21</version>
 		</dependency>
-
-        <dependency>
-            <groupId>com.tobi</groupId>
-            <artifactId>order-processor-commons</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
 	</dependencies>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
 
 </project>
