--- a/reporting-service/pom.xml
+++ b/reporting-service/pom.xml
@@ -15,14 +15,11 @@
 	<description>Demo project for Spring Boot</description>
 
     <dependencies>
-        <dependency>
-            <groupId>org.apache.kafka</groupId>
-            <artifactId>kafka-streams</artifactId>
-        </dependency>
+
 		<dependency>
-			<groupId>org.assertj</groupId>
-			<artifactId>assertj-core</artifactId>
-			<scope>test</scope>
+			<groupId>com.tobi</groupId>
+			<artifactId>order-processor-commons</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 	<build>
