--- a/inventory-managenemt/src/main/resources/application.properties
+++ b/inventory-managenemt/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 server.port=9000
 
-spring.kafka.producer.bootstrap-servers=localhost:9092
+spring.kafka.producer.bootstrap-servers=${KAFKA_HOSTS}
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 
-spring.kafka.consumer.bootstrap-servers=localhost:9092
+spring.kafka.consumer.bootstrap-servers=${KAFKA_HOSTS}
 
 spring.kafka.consumer.group-id=order_processor_group_id
 spring.kafka.consumer.auto-offset-reset=earliest
