--- a/reporting-service/src/main/resources/application.properties
+++ b/reporting-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=9001
 
-spring.kafka.consumer.bootstrap-servers=localhost:9092
+spring.kafka.consumer.bootstrap-servers=${KAFKA_HOSTS}
 #
 #spring.kafka.consumer.group-id=group_id
 #spring.kafka.consumer.auto-offset-reset=earliest
